--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "name": "OpenList",
   "icons": [
     {
-      "src": "https://res.oplist.org/logo/512x512.png",
+      "src": "/logo/512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
